# ai-eng-notes

./: .gitignore  pyproject.toml
langchain/: chatbot.ipynb  llm_chain.ipynb
mlflow/: mlflow-chatmodel.ipynb  mlflow-e2e-evaluation.ipynb  mlflow-langchain.ipynb
