[project]
name = "ai-eng-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.6.3",
    "databricks-sdk>=0.44.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-ollama>=0.2.3",
    "mlflow[genai]>=2.20.2",
    "ollama>=0.4.7",
    "openai>=1.63.2",
    "pip>=25.0.1",
    "tiktoken>=0.9.0",
]
